--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" data-bs-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -12,8 +12,10 @@
 </head>
 
 <body>
+
+    <button class="btn btn-secondary position-absolute top-0 end-0 n-3 m-3" id="change" onclick="changeSiteTheme()"><i class="bi bi-brightness-high-fill"></i></button>
     <header>
-        <h1 class="text-center">Pokémon Bio</h1>
+        <h1 class="text-center mb-4 mt-4 p-4">Pokémon Bio</h1>
     </header>
 
     <main class="container-text-center">
