--- a/index.html
+++ b/index.html
@@ -7,6 +7,63 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+          @import url('https://fonts.googleapis.com/css2?family=Borel&family=Homemade+Apple&family=Luckiest+Guy&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Sriracha&display=swap');
+
+          h1 {
+            font-family: Luckiest Guy;
+            font-size: 100px;
+            background-image: linear-gradient(to right, rgb(255, 166, 0) 10%, rgb(247, 0, 0) 100%);
+            background-clip: text;
+            color: transparent;          
+          }
+
+          a {
+            background-image: linear-gradient(to right, rgb(255, 166, 0), red);
+          }
+
+          .card {
+            box-shadow: orange;
+            transition: 0.4s ease-in-out;
+          }
+
+          .card:hover{
+            box-shadow: 0 0 25px orange,
+                        0 0 25px orange,
+                        0 0 100px orange;
+          }
+
+          img {
+            mask-image: linear-gradient(to bottom, black 70%, rgba(0,0,0,0.01) 100%);
+          }
+          
+          @media(max-width: 470px) {
+            body{
+              width: 470px;
+            }
+
+            header {
+              padding: 30px;
+              width: 480px;
+              display: flex;
+              justify-content: center;
+            }
+
+            h1 {
+              font-size: 90px;
+            }
+
+            .modal-backdrop {
+              width: 495px;
+              height: 896vh;
+              display: flex;
+              flex-direction: column;
+              align-items: center;
+              background-color: white;
+            }
+          }
+
+    </style>
     <title>Pokémon Core</title>
 
 </head>
@@ -15,7 +72,7 @@
 
     <button class="btn btn-secondary position-absolute top-0 end-0 n-3 m-3" id="change" onclick="changeSiteTheme()"><i class="bi bi-brightness-high-fill"></i></button>
     <header>
-        <h1 class="text-center mb-4 mt-4 p-4">Pokémon Bio</h1>
+        <h1 class="text-center mb-4 mt-4 p-4">PokéCARD</h1>
     </header>
 
     <main class="container-text-center">
@@ -36,7 +93,8 @@
       </div>
       <div class="modal-body">
         <img src="" id="img-modal" class="card-img-top" alt="Imagem do Pokémon">
-        <p id="pokemon-describe"></p>
+        <p id="pokemon-describe"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi iusto veritatis quam ut. Aliquam sint voluptas esse tempora aliquid quam eum quibusdam architecto mollitia deleniti! Consequatur autem nobis culpa eum repellat ipsa mollitia doloremque provident.
+        </p>
       </div>
       
     </div>
